# slug-analysis-sam

./: .gitignore  LICENSE  README.md  README_solver.md  pyproject.toml  requirements.txt  shct_compositional.py  shct_compositional_sim.py  shct_correlations.py  shct_crosssection.py  shct_eos.py  shct_model.py  shct_openfoam.py  shct_style.py  shct_threed.py  solver.py  test_solver.py
.github/workflows/: ci.yml
case/outputs_mitigated/: case_config.json  engineering_deliverables.csv  fields_profile.csv  input_data_deck.csv  key_metrics.json  probabilistic_summary.csv  summary.json  timeseries_monitor.csv
case/outputs_shutin/: case_config.json  engineering_deliverables.csv  feed_composition.csv  fields_profile.csv  input_data_deck.csv  key_metrics.json  probabilistic_summary.csv  summary.json  timeseries_monitor.csv
case/outputs_steady/: case_config.json  csv_compositional.csv  csv_compositional_transport.csv  csv_crosssection.csv  drift_flux_validation_report.json  engineering_deliverables.csv  fields_profile.csv  friction_validation_report.json  hydrate_validation_report.json  input_data_deck.csv  key_metrics.json  pipe_3d.vtk  probabilistic_summary.csv  scenario_comparison.json  slug_frequency_validation_report.json  summary.json  timeseries_monitor.csv  validation_summary.json
case/outputs_steady/openfoam_cases/: README.txt  manifest.json
case/outputs_steady/openfoam_cases/section_1_x27p2km/: README.txt  (+1 more)
case/scripts/: _paths.py  build_report.py  build_reports.py  make_animations.py  run_case_study10.py
validation/data/: hydrate_equilibrium_published.json
(+45 files in other folders)
